Updated web page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ System) files.</p>
 
 <h3>Copyright and License</h3>
 
-<p>Copyright (c) 2011-2012  Eric R. Jeschke.  All rights reserved.
+<p>Copyright (c) 2011-2013  Eric R. Jeschke.  All rights reserved.
 Ginga is distributed under an open-source BSD licence.  Please see the file LICENSE.txt in the top-level directory for details.</p>
 
 <h3>Getting the source</h3>
@@ -53,7 +53,19 @@ Ginga is distributed under an open-source BSD licence.  Please see the file LICE
 
 <h3>Building and Installation</h3>
 
-<p>Please see the file <a href="https://github.com/ejeschke/ginga/blob/master/doc/INSTALL.txt">doc/INSTALL.txt</a></p>
+<p>Ginga uses a standard distutils based install, e.g.</p>
+
+<pre><code>$ python setup.py build
+</code></pre>
+
+<p>or</p>
+
+<pre><code>$ python setup.py install
+</code></pre>
+
+<p>The program can then be run using the command "ginga"</p>
+	
+<p>For more information on installation, please see the file <a href="https://github.com/ejeschke/ginga/blob/master/ginga/doc/INSTALL.txt">doc/INSTALL.txt</a></p>
 
 <h3>How do I run this thing?</h3>
 
@@ -65,7 +77,7 @@ Ginga is distributed under an open-source BSD licence.  Please see the file LICE
 
 <h3>Developers</h3>
 
-<p>See gtkw/example{1,2}.py and qtw/example{1,2}.py .  There is more information for developers in the manual.</p>
+<p>See scripts/example{1,2}_gtk.py and scripts/example{1,2}_qt.py .  There is more information for developers in the manual.</p>
 
 <h3>Etymology</h3>
 
