Updated with latest information

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ System) files.</p>
 
 <h3>Copyright and License</h3>
 
-<p>Copyright (c) 2011-2013  Eric R. Jeschke.  All rights reserved.
+<p>Copyright (c) 2011-2014  Eric R. Jeschke.  All rights reserved.
 Ginga is distributed under an open-source BSD licence.  Please see the file LICENSE.txt in the top-level directory for details.</p>
 
 <h3>Getting the source</h3>
@@ -69,7 +69,7 @@ Ginga is distributed under an open-source BSD licence.  Please see the file LICE
 
 <h3>How do I use this thing?</h3>
 
-<p>An up-to-date version of the manual is always <a href ="https://ginga.readthedocs.org/en/latest/index.html"> available on readthedocs</a>.  PDF versions of the manual and training videos are available in the <a href="https://github.com/ejeschke/ginga/downloads">downloads</a>.
+<p>An up-to-date version of the documentation is always <a href ="https://ginga.readthedocs.org/en/latest/index.html"> available on readthedocs</a>.  
 Be sure to also check out the <a href="https://github.com/ejeschke/ginga/wiki">wiki</a> and <a href="https://github.com/ejeschke/ginga/wiki/FAQ">FAQ</a>.</p>
 
 <h3>Bug reports?</h3>
@@ -78,7 +78,7 @@ Be sure to also check out the <a href="https://github.com/ejeschke/ginga/wiki">w
 
 <h3>Developers</h3>
 
-<p>See scripts/example{1,2}_gtk.py and scripts/example{1,2}_qt.py .  There is more information for developers in the manual.</p>
+<p>Please see the various scripts in the examples directory.  There is more information for developers in the manual.</p>
 
 <h3>Etymology</h3>
 
@@ -87,7 +87,11 @@ Telescope</a>, National Astronomical Observatory of Japan--thus the connection. 
 
 <h3>Pronunciation</h3>
 
-<p>Ginga the viewer may be pronounced "ging-ga" (proper japanese) or "jing-ga" (perhaps easier for western tongues).  The latter pronunciation has meaning in the Brazilian dance/martial art capoeira: a fundamental rocking or back and forth swinging motion.</p>
+<p>Ginga the viewer may be pronounced "ging-ga" (proper japanese) or
+      "jing-ga" (perhaps easier for western tongues).  The latter
+      pronunciation has meaning in the Brazilian dance/martial art
+      capoeira: a fundamental rocking or back and forth swinging
+      motion.  Pronounciation as "jin-ja" is considered poor form.</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
