Updated screen shot

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ginga by ejeschke</title>
+    <title>Ginga</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Ginga</h1>
-        <p class="header">The Ginga astronomical FITS file viewer</p>
+        <p class="header">Ginga: a Toolkit for Building Scientific Image Viewers in Python </p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/ejeschke/ginga/zipball/master">Download ZIP</a></li>
@@ -30,7 +30,7 @@
 
       </header>
       <section>
-        <p><img src="https://github.com/downloads/ejeschke/ginga/Screenshot-Ginga-800px.png" alt="Ginga screenshot"></p>
+        <p><img src="images/Ginga_screenshot_MacOSX-1024x613.jpg" alt="Ginga screenshot"></p>
 
 <h3>About Ginga</h3>
 
