--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           <li><a class="buttons github" href="https://github.com/ejeschke/ginga">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/ejeschke">ejeschke</a></p>
+        <p class="header">This project is maintained by <a class="header name"
+        href="https://github.com/ejeschke">ejeschke</a>
+        and <a class="header name" href="https://github.com/pllim">pllim</a></p>
 
 
       </header>
