Added mention of STScI.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Be sure to also check out the <a href="https://github.com/ejeschke/ginga/wiki">w
 
 <h3>Etymology</h3>
 
-<p>"Ginga" is the romanized spelling of the Japanese word "銀河" (hiragana: ぎんが), meaning "galaxy" (in general) and, more familiarly, the Milky Way.  This viewer was written by software engineers at <a href="http://subarutelescope.org/">Subaru Telescope</a>, National Astronomical Observatory of Japan; thus the connection.</p>
+<p>"Ginga" is the romanized spelling of the Japanese word "銀河" (hiragana: ぎんが), meaning "galaxy" (in general) and, more familiarly, the Milky Way.  This viewer was written by software engineers at <a href="http://subarutelescope.org/">Subaru Telescope</a>, National Astronomical Observatory of Japan (NAOJ); thus the connection. In addition, this software is also partly supported by Space Telescope Science Institute (STScI) via open-source collaboration.</p>
 
 <h3>Pronunciation</h3>
 
